# zdev

./: .claudeignore  .editorconfig  .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.zed/: settings.json
api/: Dockerfile  README.md  pyproject.toml
api/src/zapi/: main.py
docs/: depannage.md  index.md
docs/api/: reference.md
docs/architecture/: extensions.md  persistance.md  vue-ensemble.md
docs/extensions/: adfz-common.md  apa.md  compiled-code-coverage.md  db2.md  fault-analyzer.md  file-manager.md  index.md  outils-generaux.md  taz.md  z-open-debug.md  z-open-editor.md  zowe-cics.md  zowe-explorer.md  zowe-ftp.md
docs/guide/: arborescence.md  installation.md  utilisation.md  zowe.md
docs/sources/: api-code.md  docker-compose.md  dockerfile.md  entrypoint.md  fetch-extensions.md  index.md  makefile.md  setup-host.md
docs/stylesheets/: extra.css
ide/: Dockerfile  README.md  entrypoint.sh  fetch_extensions.sh  ruff.toml  settings.json  setup_host.sh
ide/copilot/: instructions.md
ide/copilot/instructions/: mainframe.instructions.md  open.instructions.md
ide/zowe/zowe-cli-plugins-3.4.1/: cics-for-zowe-cli.tgz  mq-for-zowe-cli.tgz  zos-ftp-for-zowe-cli.tgz
