[project]
name = "zdev-docs"
version = "0.1.0"
description = "Documentation MkDocs pour zdev"
requires-python = ">=3.11"
dependencies = [
    "mkdocs-material>=9.5",
    "mkdocs-minify-plugin>=0.8",
    "mkdocs-git-revision-date-localized-plugin>=1.2",
    "mkdocs-awesome-pages-plugin>=2.9",
    "mkdocs-include-markdown-plugin>=6.0",
    "mkdocs-macros-plugin>=1.0",
]
